feat: populate tagged ID attributes
If an auto id string attribute has two tags, namely id digit count and id prefix, will generate a new id using a sequence.